# assignment-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: compliance.yml
