[project]
name = "rpn_s26"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ruff",
    "typer",
    "rich",
    "pre-commit",
    "numpy",
    "matplotlib",
    "pygame",
    "scipy",
    "casadi",
    "cvxpy",
]

[tool.uv]
package = false
